crates/lang/macro/tests/ui/trait_def/fail/message_constructor_conflict.stderr
error: encountered conflicting ink! attribute argument
 --> $DIR/message_constructor_conflict.rs:5:20
  |
5 |     #[ink(message, constructor)]
  |                    ^^^^^^^^^^^
